--- a/tfs.html
+++ b/tfs.html
@@ -10,7 +10,7 @@
    <h1 id="tfss">USING TECHNOLOGY FOR SOIL HEALTH</h1>
 
    <ol id="orls"> 
-    <li><h2>Soil Sensors</h2></li>
+    <h2>Soil Sensors</h2>
     <p>Soil sensors are devices used to measure various soil properties in real-time. <br>
      <br> These sensors can detect a range of parameters such as soil moisture, pH, temperature, nutrient levels, and contaminant concentrations.</p>
       
@@ -21,7 +21,7 @@
            <li> Precision Agriculture: Apply inputs (water, fertilizers) accurately, reducing the risk of pollution from agricultural runoff.</li>
        </ul>
 
-       <li><h2>Remote Sensing</h2></li>
+       <h2>Remote Sensing</h2>
        <p>Applications in Soil Pollution Prevention:</p>
        <ul>
         <li>Monitoring Soil Health: Identify areas with potential soil degradation or contamination.</li>
@@ -29,14 +29,14 @@
         <li>Assessment of Remediation Efforts: Evaluate the effectiveness of soil cleanup and remediation projects.</li>
        </ul>
 
-      <li><h2>Nanotechnology</h2></li>
+      <h2>Nanotechnology</h2>
        <p>Applications in Soil Pollution Prevention:</p>
         <ul>
             <li>Targeted Delivery Systems: Ensure that fertilizers and pesticides are delivered precisely where needed, reducing excess use and pollution.</li>
             <li>Soil Remediation: Use nanoparticles to neutralize pollutants and enhance soil recovery processes.</li>
         </ul>
 
-        <li><h2>Blockchain Technology</h2></li>
+        <h2>Blockchain Technology</h2>
         <p>Applications in Soil Pollution Prevention:</p>
 
         <ul>
@@ -45,7 +45,7 @@
             <li> Supply Chain Accountability: Ensure that all parts of the supply chain adhere to environmental regulations and standards.</li>
         </ul>
 
-        <li><h2>Machine Learning Algorithms and Geospatial Analysis</h2></li>
+        <h2>Machine Learning Algorithms and Geospatial Analysis</h2>
         <p>Applications in Soil Pollution Prevention:</p>
 
         <ul>
@@ -55,7 +55,7 @@
         </ul>
 
 
-  <li><h2> 3D Printing Technology</h2></li>
+  <h2> 3D Printing Technology</h2>
     <p>Applications in Soil Pollution Prevention:</p>
     <ul>
         <li>Customized Soil Probes: Design and produce soil probes and sensors that meet specific research needs.</li>
